feat: add endpoint for getting candidate flashcards
